--- a/mantis-tests/application.properties
+++ b/mantis-tests/application.properties
@@ -6,5 +6,5 @@ ui.check = true
 
 mailserver = localhost
 mailserver.adminport = 4555
-mailserver.adminlogin = root
+mailserver.adminlogin = administrator
 mailserver.adminpassword = root
